# ucas-ast-interpreter

./: builtin.c  grade.sh  readme.md
ast-interpreter/: ASTInterpreter.cpp  CMakeLists.txt  Environment.h
tests/: test01.c  test02.c  test23.c
